fix: Remove white-space: pre-wrap which completely broke markdown rendering and caused vertical spacing bugs

--- a/src/components/ReportResult.module.css
+++ b/src/components/ReportResult.module.css
@@ -67,7 +67,6 @@
   font-size: 1.15rem;
   line-height: 1.85;
   color: #475569;
-  white-space: pre-wrap;
 }
 
 .chartCard {
